Added the ear project and the ejb project or business project to the respectives methods

--- a/RootProject/pom.xml
+++ b/RootProject/pom.xml
@@ -65,5 +65,7 @@
 	<modules>
 		<module>PersistenceProject</module>
 		<module>TestProject</module>
+		<module>EARProject</module>
+		<module>BusinessProject</module>
 	</modules>
 </project>
