Added the test and the administratorEJB and EJB Remote

--- a/RootProject/TestProject/pom.xml
+++ b/RootProject/TestProject/pom.xml
@@ -95,5 +95,11 @@
 			<artifactId>PersistenceProject</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>co.crisifactory.linkResearcher</groupId>
+			<artifactId>BusinessProject</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>ejb</type>
+		</dependency>
 	</dependencies>
 </project>
