Added the desktop project

--- a/RootProject/pom.xml
+++ b/RootProject/pom.xml
@@ -67,5 +67,6 @@
 		<module>TestProject</module>
 		<module>EARProject</module>
 		<module>BusinessProject</module>
+		<module>DesktopProject</module>
 	</modules>
 </project>
